--- a/css/style.css
+++ b/css/style.css
@@ -4,22 +4,28 @@
     padding: 0;
 }
 :root {
-    --color-primary-dark:#0C0C0C;
+    --color-primary-dark:rgba(22,22,22,0.9);
     --color-font-primary-dark:#ffffff;
-    --color-background-primary-dark: #0C0E13;
+    --color-background-primary-dark: rgba(19,19,19,0.3);
     --color-borderline-primary-dark: #F1F5F9;
     --color-background-button: #2563EB;
 }
 body {
     font-family: 'Anek Latin', sans-serif;
-    background-color: var(--color-background-primary-dark);
+    background: rgb(55,12,44);
+background: radial-gradient(circle, rgba(55,12,44,0.95) 3%, rgba(31,1,34,0.98) 42%, rgba(0,0,1,0.9528186274509804) 83%);
 }
 .header {
     background-color: var(--color-primary-dark) ;
     color: var(--color-font-primary-dark);
     display: flex;
+    align-items: center;
     justify-content: space-between;
-    padding: 1.3em;
+    padding: .5em;
+    margin-bottom: 2%;
+}
+.header-title {
+    font-size: 1.7em;
 }
 .header .btn-dark {
     padding: 1em;
@@ -39,11 +45,14 @@ body {
     width: 435px;
     height: 253px;
     border-radius: 20px;
-    background: #0575E6;  /* fallback for old browsers */
-    background: -webkit-linear-gradient(to right, #021B79, #0575E6);  /* Chrome 10-25, Safari 5.1-6 */
-    background: linear-gradient(to right, #021B79, #0575E6); /* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */
+    background: #4b6cb7;  /* fallback for old browsers */
+background: -webkit-linear-gradient(to right, #182848, #4b6cb7);  /* Chrome 10-25, Safari 5.1-6 */
+background: linear-gradient(to right, #182848, #4b6cb7); /* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */
+
 }
 .data-card {
+    background-color: var(--color-background-primary-dark);
+    opacity: .9;
     margin-top: 8%;
     position: absolute;
     width: 827px;   
