--- a/css/style.css
+++ b/css/style.css
@@ -4,16 +4,15 @@
     padding: 0;
 }
 :root {
-    --color-primary-dark:rgba(22,22,22,0.9);
+    --color-primary-dark:rgba(22,22,22,0.6);
     --color-font-primary-dark:#ffffff;
-    --color-background-primary-dark: rgba(19,19,19,0.3);
+    --color-background-primary-dark: #0C0E13;
     --color-borderline-primary-dark: #F1F5F9;
     --color-background-button: #2563EB;
 }
 body {
     font-family: 'Anek Latin', sans-serif;
-    background: rgb(55,12,44);
-background: radial-gradient(circle, rgba(55,12,44,0.95) 3%, rgba(31,1,34,0.98) 42%, rgba(0,0,1,0.9528186274509804) 83%);
+    background-color: var(--color-background-primary-dark);
 }
 .header {
     background-color: var(--color-primary-dark) ;
@@ -46,8 +45,8 @@ background: radial-gradient(circle, rgba(55,12,44,0.95) 3%, rgba(31,1,34,0.98) 4
     height: 253px;
     border-radius: 20px;
     background: #4b6cb7;  /* fallback for old browsers */
-background: -webkit-linear-gradient(to right, #182848, #4b6cb7);  /* Chrome 10-25, Safari 5.1-6 */
-background: linear-gradient(to right, #182848, #4b6cb7); /* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */
+    background: -webkit-linear-gradient(to right, #182848, #4b6cb7);  /* Chrome 10-25, Safari 5.1-6 */
+    background: linear-gradient(to right, #182848, #4b6cb7); /* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */
 
 }
 .data-card {
@@ -107,13 +106,15 @@ background: linear-gradient(to right, #182848, #4b6cb7); /* W3C, IE 10+/ Edge, F
 .form-data-card {
     color: white;
 }
+input {
+    outline: none;
+    border: none;
+}
 .form-data-card input {
     padding: 1.2em;
     border-radius: 50px;
     width: 100%;
     margin: .5em;
-    outline: none;
-    border: none;
 }
 .group-input label,p  {
     margin-left: 1em;
@@ -128,23 +129,6 @@ background: linear-gradient(to right, #182848, #4b6cb7); /* W3C, IE 10+/ Edge, F
     display: flex;
     align-items: center;
     justify-content: flex-end;
-}
-.data-error-check input {
-
-}
-.icon-error,.icon-check {
-    margin-right: 3%;
-    position: absolute;
-    z-index: 10;
-    color: red;
-    display: none;
-}
-.icon-check {
-    color: green;
-    display: none  ;
-}
-.icon--confg {
-    margin-right: 10%;
 }
 .btn-validar{
     margin: 0 auto;
@@ -162,4 +146,10 @@ background: linear-gradient(to right, #182848, #4b6cb7); /* W3C, IE 10+/ Edge, F
     width: 100%;
     display: flex;
     justify-content: space-between;
+}
+.valid{
+    border: 1px solid green;
+}
+.invalid {
+    border:1px solid red;
 }
